--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
   "scripts": {
     "clean": "rm -rf .build && mkdir .build .build/assets .build/blog .build/tag .build/category",
     "prebuild": "npm run clean -s",
+    "build": "npm run build:assets && npm run build:css && npm run build:js && npm run build:html && npm run build:deps",
     "build:assets": "rsync assets/* .build & cp -r assets/img .build/assets/img & cp -r assets/webfonts .build/assets/webfonts",
+    "build:html": "echo add_builder_script_here",
     "build:css": "node-sass --include-path assets/scss assets/scss/lightweightadventures.scss .build/assets/css/lightweightadventures.css",
     "build:js": "cp -r assets/js .build/assets/js",
+    "build:deps": "echo add_browserify_script_here",
+    "watch": "parallelshell 'npm run watch:css' 'npm run watch:js'",
+    "watch:css": "onchange assets/scss/*.scss assets/scss/**/*.scss -- npm run build:css",
+    "watch:js": "onchange assets/js/*.js assets/js/**/*.js -- npm run build:js",
+    "open:prod": "opener http://lightweightadventur.es",
+    "open:dev": "opener http://localhost:9090",
+    "serve": "http-server -p 9090 .build/",
+    "livereload": "live-reload --port 9091 .build/",
+    "dev": "npm run open:dev & parallelshell 'npm run livereload' 'npm run serve' 'npm run watch'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -24,5 +35,12 @@
   "license": "ISC",
   "dependencies": {
     "node-sass": "^3.11.3"
+  },
+  "devDependencies": {
+    "http-server": "^0.9.0",
+    "live-reload": "^1.1.0",
+    "onchange": "^3.0.2",
+    "opener": "^1.4.2",
+    "parallelshell": "^2.0.0"
   }
 }
