--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run clean -s",
     "build": "npm run build:assets && npm run build:css && npm run build:js && npm run build:html && npm run build:deps",
     "build:assets": "rsync assets/* .build & cp -r assets/img .build/assets/img & cp -r assets/webfonts .build/assets/webfonts",
-    "build:html": "echo add_builder_script_here",
+    "build:html": "node scripts/build.js",
     "build:css": "node-sass --include-path assets/scss assets/scss/lightweightadventures.scss .build/assets/css/lightweightadventures.css",
     "build:js": "cp -r assets/js .build/assets/js",
     "build:deps": "echo add_browserify_script_here",
@@ -34,7 +34,9 @@
   "author": "Adam Tait",
   "license": "ISC",
   "dependencies": {
-    "node-sass": "^3.11.3"
+    "fs": "0.0.1-security",
+    "node-sass": "^3.11.3",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "http-server": "^0.9.0",
