--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs": "0.0.1-security",
     "node-sass": "^3.11.3",
     "pug": "^2.0.0-beta6",
+    "rename": "^1.0.3",
     "request": "^2.78.0"
   },
   "devDependencies": {
