Formate date with moment

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^2.0.0",
     "fs": "0.0.1-security",
     "markdown-it": "^8.1.0",
+    "moment": "^2.16.0",
     "node-sass": "^3.11.3",
     "pug": "^2.0.0-beta6",
     "rename": "^1.0.3",
