All scripts working

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "clean": "rm -rf .build && mkdir .build .build/assets .build/blog .build/tag .build/category",
     "prebuild": "npm run clean -s",
-    "build": "npm run build:assets && npm run build:css && npm run build:js && npm run build:html && npm run build:deps",
+    "build": "npm run build:assets && npm run build:css && npm run build:js && npm run build:html",
     "build:assets": "rsync assets/* .build & cp -r assets/img .build/assets/img & cp -r assets/webfonts .build/assets/webfonts",
     "build:html": "node builder/build.js",
     "build:css": "node-sass --include-path assets/scss assets/scss/lightweightadventures.scss .build/assets/css/lightweightadventures.css",
-    "build:js": "cp -r assets/js .build/assets/js",
-    "build:deps": "echo add_browserify_script_here",
+    "build:js": "cp -r assets/js .build/assets/js && rm -rf .build/assets/js/modules && npm run build:vendor && npm run build:app",
+    "build:vendor": "browserify -r jquery -r dropcap.js -r google-maps > .build/assets/js/vendor.js",
+    "build:app": "browserify -x jquery -x dropcap.js assets/js/modules/nav-toggle.js assets/js/modules/embedly.js assets/js/modules/google-maps.js assets/js/modules/dropcaps.js > .build/assets/js/app.js",
     "watch": "parallelshell 'npm run watch:css' 'npm run watch:js'",
     "watch:css": "onchange assets/scss/*.scss assets/scss/**/*.scss -- npm run build:css",
     "watch:js": "onchange assets/js/*.js assets/js/**/*.js -- npm run build:js",
@@ -36,7 +37,10 @@
   "dependencies": {
     "contentful": "^3.7.1",
     "dotenv": "^2.0.0",
+    "dropcap.js": "^1.0.1",
     "fs": "0.0.1-security",
+    "google-maps": "^3.2.1",
+    "jquery": "^3.1.1",
     "markdown-it": "^8.1.0",
     "moment": "^2.16.0",
     "node-sass": "^3.11.3",
