Pull out browserify script to separate .sh file

--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "build:assets": "rsync assets/* .build & cp -r assets/img .build/assets/img & cp -r assets/webfonts .build/assets/webfonts",
     "build:html": "node builder/build.js",
     "build:css": "node-sass --include-path assets/scss assets/scss/lightweightadventures.scss .build/assets/css/lightweightadventures.css",
-    "build:js": "cp -r assets/js .build/assets/js && rm -rf .build/assets/js/modules && npm run build:vendor && npm run build:app",
-    "build:vendor": "browserify -r jquery -r dropcap.js -r google-maps > .build/assets/js/vendor.js",
-    "build:app": "browserify -x jquery -x dropcap.js assets/js/modules/nav-toggle.js assets/js/modules/embedly.js assets/js/modules/google-maps.js assets/js/modules/dropcaps.js > .build/assets/js/app.js",
+    "build:js": "cp -r assets/js .build/assets/js && rm -rf .build/assets/js/modules && npm run build:deps",
+    "build:deps": "builder/browserify.sh",
     "watch": "parallelshell 'npm run watch:css' 'npm run watch:js'",
     "watch:css": "onchange assets/scss/*.scss assets/scss/**/*.scss -- npm run build:css",
     "watch:js": "onchange assets/js/*.js assets/js/**/*.js -- npm run build:js",
